[gd_scene load_steps=49 format=3 uid="uid://djnt51xv7wn52"]

[ext_resource type="Theme" uid="uid://bvfthh0vm4fbp" path="res://resources/uiTheme.tres" id="1_j8y2p"]
[ext_resource type="Script" uid="uid://2wjcj6frwpjo" path="res://scripts/singletons/editor/editor.gd" id="2_o435n"]
[ext_resource type="Script" uid="uid://bt2qk0jhpuc53" path="res://scripts/singletons/editor/topBar.gd" id="3_3vi5u"]
[ext_resource type="Script" uid="uid://ced7aml4sfanx" path="res://scripts/singletons/editor/modes.gd" id="4_4jiep"]
[ext_resource type="Texture2D" uid="uid://brlbjt36syjq8" path="res://assets/ui/modes/select.png" id="4_78fwb"]
[ext_resource type="Script" uid="uid://buv3n70m06kje" path="res://scripts/nodes/hotkeyButton.gd" id="5_3vi5u"]
[ext_resource type="Texture2D" uid="uid://tcsqjcnuio0j" path="res://assets/ui/modes/tile.png" id="5_74j0u"]
[ext_resource type="Texture2D" uid="uid://5nn25q4md27b" path="res://assets/ui/modes/file.png" id="5_m12ww"]
[ext_resource type="Script" uid="uid://bu13x48angurk" path="res://scripts/singletons/editor/fileMenu.gd" id="6_7msgv"]
[ext_resource type="Texture2D" uid="uid://cx3mntdf11c1g" path="res://assets/ui/modes/key.png" id="6_sdh1e"]
[ext_resource type="Texture2D" uid="uid://ckk7i2y24ysor" path="res://assets/ui/modes/door.png" id="7_2w0at"]
[ext_resource type="PackedScene" uid="uid://2hd65vn44me7" path="res://scenes/world.tscn" id="8_5tdu1"]
[ext_resource type="Shader" uid="uid://befrul0j4yc02" path="res://resources/materials/game.gdshader" id="8_o435n"]
[ext_resource type="Texture2D" uid="uid://b4tmgbs01eh7i" path="res://assets/ui/modes/paste.png" id="9_0u1f5"]
[ext_resource type="Script" uid="uid://brsj7c2dial40" path="res://scripts/singletons/editor/otherObjects.gd" id="9_k1sck"]
[ext_resource type="Texture2D" uid="uid://b2ouh1fqa64em" path="res://assets/ui/modes/search.png" id="10_8g6du"]
[ext_resource type="Texture2D" uid="uid://di4cbwrveccbg" path="res://assets/game/playerSpawn/levelStart.png" id="10_aa8l6"]
[ext_resource type="FontFile" uid="uid://cjub6sxbu8elx" path="res://resources/fonts/RobotoMono-SemiBold.ttf" id="12_2w0at"]
[ext_resource type="PackedScene" uid="uid://8bth374yqwpe" path="res://scenes/focusDialog/focusDialog.tscn" id="12_74j0u"]
[ext_resource type="PackedScene" uid="uid://c1kt2qxw6ooqf" path="res://scenes/multiselect.tscn" id="12_q8l03"]
[ext_resource type="Script" uid="uid://pssxp78klup" path="res://scripts/singletons/editor/multiselect.gd" id="13_0u1f5"]
[ext_resource type="Texture2D" uid="uid://dn5r7rhgoxtrt" path="res://assets/ui/playControls/play.png" id="13_wyx26"]
[ext_resource type="Script" uid="uid://y6lb6luqyxy2" path="res://scripts/singletons/editor/quickSet.gd" id="14_sdh1e"]
[ext_resource type="Texture2D" uid="uid://lbuoq1o35ds2" path="res://assets/ui/playControls/pause.png" id="15_fce0a"]
[ext_resource type="Texture2D" uid="uid://dnjchcne7ikhq" path="res://assets/ui/playControls/stop.png" id="16_m12ww"]
[ext_resource type="Script" uid="uid://cgjhnhjwymb8g" path="res://scripts/resources/controlExplanation.gd" id="17_bn54a"]
[ext_resource type="Texture2D" uid="uid://bdtmt4y2pnoo0" path="res://assets/ui/playControls/savestate.png" id="17_lo5f0"]
[ext_resource type="Script" uid="uid://c7ptucaohcnil" path="res://scripts/singletons/editor/outline.gd" id="23_lo5f0"]
[ext_resource type="PackedScene" uid="uid://uojm0pynavni" path="res://scenes/settingsMenu.tscn" id="25_6lm8n"]
[ext_resource type="PackedScene" uid="uid://ccqphk3fjcl1e" path="res://scenes/mouseover.tscn" id="26_lo5f0"]
[ext_resource type="Texture2D" uid="uid://ba540b55427af" path="res://assets/ui/settings/setings.png" id="27_1abrv"]
[ext_resource type="PackedScene" uid="uid://r7q8sdncd4jo" path="res://scenes/outlineViewport.tscn" id="28_e62bx"]
[ext_resource type="Shader" uid="uid://b7ek3evjsfuc5" path="res://resources/materials/outline.gdshader" id="29_65evm"]
[ext_resource type="Texture2D" uid="uid://d10g6pdt4sjs2" path="res://assets/ui/mods/iconSmall/Refactored.png" id="33_mxdmd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_74j0u"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 6
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sdh1e"]
bg_color = Color(1, 1, 1, 1)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 6
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2w0at"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.585062, 0.585062, 0.5850621, 0.6)
corner_radius_top_left = 6
corner_detail = 5

[sub_resource type="ButtonGroup" id="ButtonGroup_wm3ai"]
resource_name = "modes"

[sub_resource type="Resource" id="Resource_lo5f0"]
script = ExtResource("17_bn54a")
explanation = "[%s]Search objects"
hotkeys = Array[StringName]([&"editObjectSearch"])
metadata/_custom_type_script = "uid://cgjhnhjwymb8g"

[sub_resource type="Resource" id="Resource_mxdmd"]
script = ExtResource("17_bn54a")
explanation = "[%s]Leave savestate"
hotkeys = Array[StringName]([&"editSavestate"])
metadata/_custom_type_script = "uid://lwocqakgt4qr"

[sub_resource type="Resource" id="Resource_1abrv"]
script = ExtResource("17_bn54a")
explanation = "[%s]Start Playtest"
hotkeys = Array[StringName]([&"editStartPlaytest"])
metadata/_custom_type_script = "uid://lwocqakgt4qr"

[sub_resource type="Resource" id="Resource_bn54a"]
script = ExtResource("17_bn54a")
explanation = "[%s]Pause Playtest"
hotkeys = Array[StringName]([&"editPausePlaytest"])
metadata/_custom_type_script = "uid://lwocqakgt4qr"

[sub_resource type="Resource" id="Resource_6lm8n"]
script = ExtResource("17_bn54a")
explanation = "[%s]Stop Playtest"
hotkeys = Array[StringName]([&"editStopPlaytest"])
metadata/_custom_type_script = "uid://lwocqakgt4qr"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3vi5u"]
shader = ExtResource("8_o435n")
shader_parameter/screenPosition = Vector2(0, 0)
shader_parameter/viewportPosition = Vector2(0, 0)
shader_parameter/mousePosition = Vector2(0, 0)
shader_parameter/tileSize = Vector2(32, 32)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pgu5w"]
shader = ExtResource("29_65evm")
shader_parameter/width = 1.0
shader_parameter/rChannel = Color(1, 1, 1, 1)
shader_parameter/gChannel = Color(0, 0, 0, 1)
shader_parameter/bChannel = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ndxgo"]
shader = ExtResource("29_65evm")
shader_parameter/width = 2.0
shader_parameter/rChannel = Color(0, 0.63529414, 1, 1)
shader_parameter/gChannel = Color(1, 1, 1, 1)
shader_parameter/bChannel = Color(0, 0, 0, 1)

[sub_resource type="Resource" id="Resource_jke8t"]
script = ExtResource("17_bn54a")
explanation = "[%s]Open Settings"
hotkeys = Array[StringName]([&"editOpenSettings"])
metadata/_custom_type_script = "uid://lwocqakgt4qr"

[sub_resource type="LabelSettings" id="LabelSettings_ndxgo"]
font = ExtResource("12_2w0at")
font_size = 12

[node name="editor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
script = ExtResource("2_o435n")

[node name="c" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_j8y2p")

[node name="c" type="PanelContainer" parent="c"]
z_index = 4
layout_mode = 2

[node name="c" type="ScrollContainer" parent="c/c"]
clip_contents = false
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
vertical_scroll_mode = 0

[node name="topBar" type="MarginContainer" parent="c/c/c"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("3_3vi5u")

[node name="c" type="HBoxContainer" parent="c/c/c/topBar"]
layout_mode = 2

[node name="modes" type="HBoxContainer" parent="c/c/c/topBar/c"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("4_4jiep")

[node name="fileMenu" type="MenuButton" parent="c/c/c/topBar/c/modes" node_paths=PackedStringArray("shortcut_context")]
unique_name_in_owner = true
layout_mode = 2
shortcut_context = NodePath(".")
icon = ExtResource("5_m12ww")
flat = false
item_count = 9
popup/item_0/text = "New"
popup/item_0/id = 0
popup/item_1/text = "Open"
popup/item_1/id = 1
popup/item_2/text = "Save"
popup/item_2/id = 2
popup/item_3/text = "Save As"
popup/item_3/id = 3
popup/item_4/text = "Export"
popup/item_4/id = 4
popup/item_5/text = "Open Puzzles Folder"
popup/item_5/id = 5
popup/item_6/id = 6
popup/item_6/separator = true
popup/item_7/text = "Mods "
popup/item_7/id = 7
popup/item_8/text = "Play Current"
popup/item_8/id = 8
script = ExtResource("6_7msgv")

[node name="spacer" type="Control" parent="c/c/c/topBar/c/modes"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="select" type="Button" parent="c/c/c/topBar/c/modes"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_74j0u")
theme_override_styles/pressed = SubResource("StyleBoxFlat_sdh1e")
theme_override_styles/hover = SubResource("StyleBoxFlat_2w0at")
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_wm3ai")
icon = ExtResource("4_78fwb")
script = ExtResource("5_3vi5u")
defaultHotkey = &"editModeSelect"
metadata/_custom_type_script = "uid://buv3n70m06kje"

[node name="tile" type="Button" parent="c/c/c/topBar/c/modes"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_wm3ai")
icon = ExtResource("5_74j0u")
script = ExtResource("5_3vi5u")
defaultHotkey = &"editModeTile"
pressedHotkey = &"heldKeepMode"
metadata/_custom_type_script = "uid://buv3n70m06kje"

[node name="key" type="Button" parent="c/c/c/topBar/c/modes"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_wm3ai")
icon = ExtResource("6_sdh1e")
script = ExtResource("5_3vi5u")
defaultHotkey = &"editModeKey"
pressedHotkey = &"heldKeepMode"
metadata/_custom_type_script = "uid://buv3n70m06kje"

[node name="door" type="Button" parent="c/c/c/topBar/c/modes"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_wm3ai")
icon = ExtResource("7_2w0at")
script = ExtResource("5_3vi5u")
defaultHotkey = &"editModeDoor"
pressedHotkey = &"heldKeepMode"
metadata/_custom_type_script = "uid://buv3n70m06kje"

[node name="otherObjects" type="HBoxContainer" parent="c/c/c/topBar/c/modes"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("9_k1sck")

[node name="spacer" type="Control" parent="c/c/c/topBar/c/modes/otherObjects"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2

[node name="c" type="VBoxContainer" parent="c/c/c/topBar/c/modes/otherObjects"]
layout_mode = 2

[node name="c" type="HBoxContainer" parent="c/c/c/topBar/c/modes/otherObjects/c"]
layout_mode = 2

[node name="other" type="Button" parent="c/c/c/topBar/c/modes/otherObjects/c/c"]
unique_name_in_owner = true
custom_minimum_size = Vector2(36, 0)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_wm3ai")
icon = ExtResource("10_aa8l6")
script = ExtResource("5_3vi5u")
defaultHotkey = &"editModeOther"
pressedHotkey = &"heldKeepMode"
metadata/_custom_type_script = "uid://buv3n70m06kje"

[node name="objectSearch" type="LineEdit" parent="c/c/c/topBar/c/modes/otherObjects/c/c" groups=["explained"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
placeholder_text = "Search objects"
right_icon = ExtResource("10_8g6du")
caret_blink = true
metadata/explanation = SubResource("Resource_lo5f0")

[node name="c2" type="Control" parent="c/c/c/topBar/c/modes/otherObjects/c"]
layout_mode = 2

[node name="results" type="VBoxContainer" parent="c/c/c/topBar/c/modes/otherObjects/c/c2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="spacer2" type="Control" parent="c/c/c/topBar/c/modes/otherObjects"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2

[node name="paste" type="Button" parent="c/c/c/topBar/c/modes"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
toggle_mode = true
button_group = SubResource("ButtonGroup_wm3ai")
icon = ExtResource("9_0u1f5")
script = ExtResource("5_3vi5u")
defaultHotkey = &"editPaste"
pressedHotkey = &"heldKeepMode"
metadata/_custom_type_script = "uid://buv3n70m06kje"

[node name="settingTabs" type="TabBar" parent="c/c/c/topBar/c"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
current_tab = 0
clip_tabs = false
tab_count = 3
tab_0/title = "Level"
tab_1/title = "Editor"
tab_2/title = "Game"

[node name="playControls" type="HBoxContainer" parent="c/c/c/topBar/c"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="savestate" type="Button" parent="c/c/c/topBar/c/playControls" groups=["explained"]]
unique_name_in_owner = true
visible = false
layout_mode = 2
icon = ExtResource("17_lo5f0")
script = ExtResource("5_3vi5u")
defaultHotkey = &"editSavestate"
metadata/_custom_type_script = "uid://buv3n70m06kje"
metadata/explanation = SubResource("Resource_mxdmd")

[node name="play" type="Button" parent="c/c/c/topBar/c/playControls" groups=["explained"]]
unique_name_in_owner = true
layout_mode = 2
disabled = true
icon = ExtResource("13_wyx26")
script = ExtResource("5_3vi5u")
defaultHotkey = &"editStartPlaytest"
metadata/_custom_type_script = "uid://buv3n70m06kje"
metadata/explanation = SubResource("Resource_1abrv")

[node name="pause" type="Button" parent="c/c/c/topBar/c/playControls" groups=["explained"]]
unique_name_in_owner = true
visible = false
layout_mode = 2
icon = ExtResource("15_fce0a")
script = ExtResource("5_3vi5u")
defaultHotkey = &"editPausePlaytest"
metadata/_custom_type_script = "uid://buv3n70m06kje"
metadata/explanation = SubResource("Resource_bn54a")

[node name="stop" type="Button" parent="c/c/c/topBar/c/playControls" groups=["explained"]]
unique_name_in_owner = true
visible = false
layout_mode = 2
icon = ExtResource("16_m12ww")
script = ExtResource("5_3vi5u")
defaultHotkey = &"editStopPlaytest"
metadata/_custom_type_script = "uid://buv3n70m06kje"
metadata/explanation = SubResource("Resource_6lm8n")

[node name="gameCont" type="MarginContainer" parent="c"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="gameViewportCont" type="SubViewportContainer" parent="c/gameCont"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_3vi5u")
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
stretch = true

[node name="gameViewport" type="SubViewport" parent="c/gameCont/gameViewportCont"]
unique_name_in_owner = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(820, 628)
render_target_update_mode = 4

[node name="world" parent="c/gameCont/gameViewportCont/gameViewport" instance=ExtResource("8_5tdu1")]
unique_name_in_owner = true

[node name="editorCamera" type="Camera2D" parent="c/gameCont/gameViewportCont/gameViewport/world"]
unique_name_in_owner = true
position = Vector2(-10, -10)
anchor_mode = 0
limit_enabled = false

[node name="playtestCamera" type="Camera2D" parent="c/gameCont/gameViewportCont/gameViewport/world"]
unique_name_in_owner = true
offset = Vector2(0, -0.1)
enabled = false
limit_left = 0
limit_top = 0
limit_right = 800
limit_bottom = 608
position_smoothing_enabled = true
position_smoothing_speed = 8.0

[node name="multiselect" parent="c/gameCont/gameViewportCont" instance=ExtResource("12_q8l03")]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("13_0u1f5")

[node name="outlineViewport1" parent="c/gameCont" instance=ExtResource("28_e62bx")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_pgu5w")
layout_mode = 2

[node name="outlineViewport2" parent="c/gameCont" instance=ExtResource("28_e62bx")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_ndxgo")
layout_mode = 2

[node name="outline" type="Node2D" parent="c/gameCont/outlineViewport2"]
unique_name_in_owner = true
z_index = 8
position = Vector2(0, -44)
script = ExtResource("23_lo5f0")

[node name="placePreviewViewportCont" type="SubViewportContainer" parent="c/gameCont"]
modulate = Color(1, 1, 1, 0.5019608)
layout_mode = 2
mouse_filter = 2
stretch = true

[node name="placePreviewViewport" type="SubViewport" parent="c/gameCont/placePreviewViewportCont"]
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(820, 628)
render_target_update_mode = 4

[node name="placePreviewWorld" parent="c/gameCont/placePreviewViewportCont/placePreviewViewport" instance=ExtResource("8_5tdu1")]
unique_name_in_owner = true

[node name="previewObjectsParent" type="Node2D" parent="c/gameCont/placePreviewViewportCont/placePreviewViewport/placePreviewWorld"]
unique_name_in_owner = true

[node name="placePreviewCamera" type="Camera2D" parent="c/gameCont/placePreviewViewportCont/placePreviewViewport/placePreviewWorld"]
unique_name_in_owner = true
anchor_mode = 0

[node name="c" type="Control" parent="c/gameCont"]
layout_mode = 2
mouse_filter = 2

[node name="settingsMenu" parent="c/gameCont/c" instance=ExtResource("25_6lm8n")]
unique_name_in_owner = true
visible = false
z_index = 2
layout_mode = 1

[node name="mouseover" parent="c/gameCont/c" instance=ExtResource("26_lo5f0")]
unique_name_in_owner = true
layout_mode = 0
offset_right = 85.0
offset_bottom = 49.0

[node name="c3" type="PanelContainer" parent="c"]
z_index = 3
layout_mode = 2

[node name="c2" type="HBoxContainer" parent="c/c3"]
layout_mode = 2

[node name="c2" type="MarginContainer" parent="c/c3/c2"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="quickSet" type="RichTextLabel" parent="c/c3/c2/c2"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 17)
layout_mode = 2
theme_override_colors/default_color = Color(0.8289096, 0.82890975, 0.8289095, 1)
theme_override_fonts/normal_font = ExtResource("12_2w0at")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
scroll_active = false
autowrap_mode = 0
script = ExtResource("14_sdh1e")

[node name="explainText" type="RichTextLabel" parent="c/c3/c2/c2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 17)
layout_mode = 2
theme_override_colors/default_color = Color(0.8289096, 0.82890975, 0.8289095, 1)
theme_override_fonts/normal_font = ExtResource("12_2w0at")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
scroll_active = false
autowrap_mode = 0

[node name="settingsText" type="RichTextLabel" parent="c/c3/c2/c2"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 17)
layout_mode = 2
theme_override_colors/default_color = Color(0.8289096, 0.82890975, 0.8289095, 1)
theme_override_fonts/normal_font = ExtResource("12_2w0at")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "IWLCEditor"
scroll_active = false
autowrap_mode = 0

[node name="toggleSettingsMenu" type="Button" parent="c/c3/c2" groups=["explained"]]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
icon = ExtResource("27_1abrv")
metadata/explanation = SubResource("Resource_jke8t")

[node name="focusDialog" parent="." instance=ExtResource("12_74j0u")]
unique_name_in_owner = true
visible = false
layout_mode = 0

[node name="screenshotViewportCont" type="SubViewportContainer" parent="."]
unique_name_in_owner = true
z_index = -999
layout_mode = 0
offset_top = 1000.0
offset_right = 800.0
offset_bottom = 1705.0

[node name="screenshotViewport" type="SubViewport" parent="screenshotViewportCont"]
unique_name_in_owner = true
handle_input_locally = false
size = Vector2i(800, 697)
render_target_update_mode = 4

[node name="screenshotCamera" type="Camera2D" parent="screenshotViewportCont/screenshotViewport"]
unique_name_in_owner = true
anchor_mode = 0

[node name="thumbnail" type="VBoxContainer" parent="screenshotViewportCont/screenshotViewport"]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_j8y2p")

[node name="thumbnailTop" type="PanelContainer" parent="screenshotViewportCont/screenshotViewport/thumbnail"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="screenshotInnerViewportCont" type="SubViewportContainer" parent="screenshotViewportCont/screenshotViewport/thumbnail"]
layout_mode = 2

[node name="screenshotInnerViewport" type="SubViewport" parent="screenshotViewportCont/screenshotViewport/thumbnail/screenshotInnerViewportCont"]
unique_name_in_owner = true
handle_input_locally = false
size = Vector2i(800, 608)
render_target_update_mode = 4

[node name="screenshotInnerCamera" type="Camera2D" parent="screenshotViewportCont/screenshotViewport/thumbnail/screenshotInnerViewportCont/screenshotInnerViewport"]
unique_name_in_owner = true
anchor_mode = 0

[node name="thumbnailBottom" type="PanelContainer" parent="screenshotViewportCont/screenshotViewport/thumbnail"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="c" type="MarginContainer" parent="screenshotViewportCont/screenshotViewport/thumbnail/thumbnailBottom"]
layout_mode = 2

[node name="c" type="HBoxContainer" parent="screenshotViewportCont/screenshotViewport/thumbnail/thumbnailBottom/c"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="thumbnailModpack" type="TextureRect" parent="screenshotViewportCont/screenshotViewport/thumbnail/thumbnailBottom/c/c"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("33_mxdmd")
expand_mode = 2
stretch_mode = 3

[node name="thumbnailMods" type="Label" parent="screenshotViewportCont/screenshotViewport/thumbnail/thumbnailBottom/c/c"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "IWL: Continued (C1-C5 Mechanics: IWL:C World 1, IWL:C World 2, IWL:C World 3, IWL:C World 4, IWL:C World 5,"
label_settings = SubResource("LabelSettings_ndxgo")
clip_text = true
text_overrun_behavior = 3

[node name="c" type="Control" parent="screenshotViewportCont/screenshotViewport/thumbnail/thumbnailBottom/c/c"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="l" type="Label" parent="screenshotViewportCont/screenshotViewport/thumbnail/thumbnailBottom/c/c"]
layout_mode = 2
text = "IWLCEditor"
label_settings = SubResource("LabelSettings_ndxgo")

[node name="saveAsDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
oversampling_override = 1.0
title = "Save As"
initial_position = 2
mode_overrides_title = false
display_mode = 1
access = 1
use_native_dialog = true

[node name="openDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open"
initial_position = 2
mode_overrides_title = false
file_mode = 0
display_mode = 1
access = 1
use_native_dialog = true

[node name="unsavedChangesPopup" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
oversampling_override = 1.0
title = "Unsaved Changes"
initial_position = 2
size = Vector2i(200, 90)
unresizable = true
theme = ExtResource("1_j8y2p")
ok_button_text = "Yes"
dialog_text = "You have unsaved changes.
Load new level anyway?"

[node name="loadErrorPopup" type="AcceptDialog" parent="."]
unique_name_in_owner = true
oversampling_override = 1.0
title = "Load Error"
initial_position = 2
size = Vector2i(200, 90)
unresizable = true
theme = ExtResource("1_j8y2p")

[connection signal="pressed" from="c/c/c/topBar/c/modes/select" to="c/c/c/topBar/c/modes" method="_setMode" binds= [0]]
[connection signal="pressed" from="c/c/c/topBar/c/modes/tile" to="c/c/c/topBar/c/modes" method="_setMode" binds= [1]]
[connection signal="pressed" from="c/c/c/topBar/c/modes/key" to="c/c/c/topBar/c/modes" method="_setMode" binds= [2]]
[connection signal="pressed" from="c/c/c/topBar/c/modes/door" to="c/c/c/topBar/c/modes" method="_setMode" binds= [3]]
[connection signal="pressed" from="c/c/c/topBar/c/modes/otherObjects/c/c/other" to="c/c/c/topBar/c/modes" method="_setMode" binds= [4]]
[connection signal="focus_entered" from="c/c/c/topBar/c/modes/otherObjects/c/c/objectSearch" to="c/c/c/topBar/c/modes/otherObjects" method="_searchFocused"]
[connection signal="focus_exited" from="c/c/c/topBar/c/modes/otherObjects/c/c/objectSearch" to="c/c/c/topBar/c/modes/otherObjects" method="_searchDefocused"]
[connection signal="text_changed" from="c/c/c/topBar/c/modes/otherObjects/c/c/objectSearch" to="c/c/c/topBar/c/modes/otherObjects" method="_updateSearch" unbinds=1]
[connection signal="text_submitted" from="c/c/c/topBar/c/modes/otherObjects/c/c/objectSearch" to="c/c/c/topBar/c/modes/otherObjects" method="_searchSubmitted" unbinds=1]
[connection signal="pressed" from="c/c/c/topBar/c/modes/paste" to="c/c/c/topBar/c/modes" method="_setMode" binds= [5]]
[connection signal="tab_changed" from="c/c/c/topBar/c/settingTabs" to="c/gameCont/c/settingsMenu" method="_tabSelected"]
[connection signal="pressed" from="c/c/c/topBar/c/playControls/savestate" to="c/c/c/topBar" method="_savestate"]
[connection signal="pressed" from="c/c/c/topBar/c/playControls/play" to="c/c/c/topBar" method="_play"]
[connection signal="pressed" from="c/c/c/topBar/c/playControls/pause" to="c/c/c/topBar" method="_pause"]
[connection signal="pressed" from="c/c/c/topBar/c/playControls/stop" to="c/c/c/topBar" method="_stop"]
[connection signal="resized" from="c/gameCont/gameViewportCont" to="." method="_gameViewportResized"]
[connection signal="toggled" from="c/c3/c2/toggleSettingsMenu" to="." method="_toggleSettingsMenu"]
